// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`imageToByteArray basic bgra -> bgr 1`] = `
{
  "data": [
    0,
    0,
    0,
    0,
    0,
    1,
    2,
    4,
    5,
    6,
    8,
    9,
    10,
    12,
    13,
    14,
  ],
  "type": "Buffer",
}
`;

exports[`imageToByteArray basic bgra -> rgba 1`] = `
{
  "data": [
    0,
    0,
    0,
    0,
    2,
    1,
    0,
    255,
    6,
    5,
    4,
    255,
    10,
    9,
    8,
    255,
    14,
    13,
    12,
    255,
  ],
  "type": "Buffer",
}
`;

exports[`imageToByteArray basic rgb -> bgr 1`] = `
{
  "data": [
    0,
    0,
    0,
    0,
    2,
    1,
    0,
    5,
    4,
    3,
    8,
    7,
    6,
    11,
    10,
    9,
  ],
  "type": "Buffer",
}
`;

exports[`imageToByteArray basic rgb -> rgba 1`] = `
{
  "data": [
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    2,
    255,
    3,
    4,
    5,
    255,
    6,
    7,
    8,
    255,
    9,
    10,
    11,
    255,
  ],
  "type": "Buffer",
}
`;

exports[`imageToByteArray basic vflip 1`] = `
{
  "data": [
    0,
    0,
    0,
    0,
    18,
    19,
    20,
    21,
    22,
    23,
    24,
    25,
    26,
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
  ],
  "type": "Buffer",
}
`;

exports[`imageToByteArray basic xflip 1`] = `
{
  "data": [
    0,
    0,
    0,
    0,
    6,
    7,
    8,
    3,
    4,
    5,
    0,
    1,
    2,
    15,
    16,
    17,
    12,
    13,
    14,
    9,
    10,
    11,
    24,
    25,
    26,
    21,
    22,
    23,
    18,
    19,
    20,
  ],
  "type": "Buffer",
}
`;
